# c_reginst

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  hde_placehold.h  ibeSet.cpp  ibeSet.h  ibeSet.hpp  opcOperand.cpp  opcOperand.h  opcOperand.hpp  regexcaller.cpp  regexparse.cpp  regexparse.h
amd64/: opcOp_arch.cpp  opcOp_arch.h
arm64/: opcOp_arch.cpp  opcOp_arch.h
regexcaller/: CMakeLists.txt  regexcaller.cpp  regexparse.cpp
